src/objects/Custom_metadata_label_translation__mdt.object
<CustomObject>
    <description>Custom metadata label related translations. A record should be inserted per the desired language.</description>
    <fields>
        <fullName>Custom_metadata_label__c</fullName>
        <description>Custom metadata label relation. Maintains the custom label structure. Reunifies all the possible translations for a custom metadata label.</description>
        <inlineHelpText>Select the parent custom metadata label. (Name of translation label)</inlineHelpText>
        <label>Custom metadata label</label>
        <referenceTo>Custom_metadata_label__mdt</referenceTo>
        <relationshipLabel>Custom metadata label translations</relationshipLabel>
        <relationshipName>Custom_metadata_label_translations</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>List of available languages for MFA.  (top right corner on login flow)</description>
        <inlineHelpText>List of available languages for MFA</inlineHelpText>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ar</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                    <label>Chinese</label>
                </value>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>de</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>in</fullName>
                    <label>Indonesian</label>
                </value>
                <value>
                    <fullName>it</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>ja</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>ko</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>ru</fullName>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>th</fullName>
                    <label>Thai</label>
                </value>
                <value>
                    <fullName>tr</fullName>
                    <label>Turkish</label>
                </value>
                <value>
                    <fullName>vi</fullName>
                    <label>Vietnamese</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Selected language custom metadata label translation.</description>
        <inlineHelpText>Selected language custom metadata label translation.</inlineHelpText>
        <label>Value</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Custom metadata label translation</label>
    <listViews>
        <fullName>Arabic</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>ar</value>
        </filters>
        <label>Arabic</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chinese</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>zh_CN</value>
        </filters>
        <label>Chinese</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>English</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>English</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>French</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>fr</value>
        </filters>
        <label>French</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>German</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>de</value>
        </filters>
        <label>German</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Indonesian</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>in</value>
        </filters>
        <label>Indonesian</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Italian</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>it</value>
        </filters>
        <label>Italian</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Japanese</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>ja</value>
        </filters>
        <label>Japanese</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Korean</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>ko</value>
        </filters>
        <label>Korean</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Portuguese</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>pt_BR</value>
        </filters>
        <label>Portuguese</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Russian</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>ru</value>
        </filters>
        <label>Russian</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Spanish</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>es</value>
        </filters>
        <label>Spanish</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Thai</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>th</value>
        </filters>
        <label>Thai</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Turkish</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>tr</value>
        </filters>
        <label>Turkish</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vietnamese</fullName>
        <columns>MasterLabel</columns>
        <columns>Custom_metadata_label__c</columns>
        <columns>Language__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>vi</value>
        </filters>
        <label>Vietnamese</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Custom metadata label translations</pluralLabel>
</CustomObject>